Finished screens implementation.

--- a/my-react-app/src/components/Ride/Ride.scss
+++ b/my-react-app/src/components/Ride/Ride.scss
@@ -1,3 +1,10 @@
+.banner-small {
+  background-image: url("/images/banner.png");
+  background-size: cover;
+  background-position: center;
+  height: 100px;
+}
+
 .ride-container {
   max-width: 600px;
   margin: 2rem auto;
@@ -7,9 +14,21 @@
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
   text-align: center;
 
+  p {
+    margin-bottom: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.5;
+
+    strong {
+      color: #495057;
+      margin-right: 0.5rem;
+    }
+  }
+
   h2 {
     margin-bottom: 2rem;
-    color: #333;
+    color: #fff;
+    background-color: #414141;
     font-size: 1.8rem;
   }
 
@@ -19,21 +38,6 @@
     border-radius: 6px;
     margin-bottom: 2rem;
     text-align: left;
-
-    p {
-      margin-bottom: 1rem;
-      font-size: 1.1rem;
-      line-height: 1.5;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      strong {
-        color: #495057;
-        margin-right: 0.5rem;
-      }
-    }
   }
 
   .btn-primary {
@@ -66,4 +70,94 @@
       text-align: center;
     }
   }
+}
+
+.input-group {
+  margin-bottom: 15px;
+
+  input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+
+    &::placeholder {
+      color: #999;
+    }
+  }
+}
+
+.loading-spinner {
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1.1);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.confirmation-screen {
+  text-align: center !important;
+  background-color: #414141 !important;
+  color: #fff;
+  height: 390px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .loading-spinner {
+    i {
+      font-size: 80px;
+      color: #f36421;
+    }
+  }
+
+  p {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+}
+
+.success-message-container {
+  text-align: center !important;
+  background-color: #414141 !important;
+  color: #fff;
+  height: 390px;
+
+  .success-message {
+    h2 {
+      margin-bottom: 1rem;
+    }
+
+    i.fa-truck-fast {
+      font-size: 100px;
+      font-style: italic;
+      color: #f36421;
+    }
+  }
+
+  .ride-code {
+    margin-top: 2rem;
+  }
+}
+
+.finish-message-container {
+  text-align: center !important;
+  background-color: #414141 !important;
+  color: #fff;
+  height: 200px;
 }
