--- a/my-react-app/src/shared.scss
+++ b/my-react-app/src/shared.scss
@@ -9,13 +9,13 @@ h2 {
 }
 
 .btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #00bf62;
+  border-color: #00bf62;
 }
 
 .btn-primary:hover {
-  background-color: #0056b3;
-  border-color: #0056b3;
+  background-color: #00a858;
+  border-color: #00a858;
 }
 
 .text-center {
