Added map filtering, still in it's debut.

--- a/my-react-app/src/components/Map/Map.scss
+++ b/my-react-app/src/components/Map/Map.scss
@@ -1,6 +1,13 @@
+.map-wrapper {
+  display: flex;
+  gap: 20px;
+}
+
 .map-container {
+  flex: 1;
   height: 80vh;
   width: 100%;
+  position: relative;
 }
 
 .center-control {
@@ -12,9 +19,7 @@
   margin-top: 10px;
   margin-right: 10px;
   text-align: center;
-  position: absolute;
-  right: 0;
-  top: 50px; // Adjusted to avoid overlapping with fullscreen button
+  padding: 5px;
 }
 
 .center-control-icon {
