--- a/my-react-app/src/components/Map/Map.scss
+++ b/my-react-app/src/components/Map/Map.scss
@@ -1,6 +1,7 @@
 .map-wrapper {
   display: flex;
   gap: 20px;
+  position: relative;
 }
 
 .map-container {
@@ -13,20 +14,64 @@
 .center-control {
   background-color: #fff;
   border: 2px solid #fff;
-  border-radius: 3px;
+  border-radius: 2px;
   box-shadow: 0 2px 6px rgb(0 0 0 / 30%);
   cursor: pointer;
-  margin-top: 10px;
-  margin-right: 10px;
-  text-align: center;
-  padding: 5px;
+  margin: 10px;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .center-control-icon {
   background-image: url("https://maps.gstatic.com/tactile/mylocation/mylocation-sprite-1x.png");
-  background-size: 160px 16px;
+  background-size: 180px 18px;
   background-position: 0 0;
-  width: 16px;
-  height: 16px;
-  margin: 10px;
+  width: 18px;
+  height: 18px;
+  margin: 0;
+}
+
+.sidebar-toggle {
+  position: fixed;
+  right: 10px;
+  bottom: 20px;
+  z-index: 1000;
+  background: white;
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  box-shadow: 0 2px 6px rgb(0 0 0 / 30%);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+@media (width <= 768px) {
+  .map-wrapper {
+    gap: 0;
+  }
+
+  .sidebar-toggle {
+    display: block;
+  }
+
+  .sidebar {
+    position: fixed;
+    left: -300px;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    transition: left 0.3s ease;
+
+    &.active {
+      left: 0;
+    }
+  }
 }
